// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LeverageMarketClient PTB shape openAndApplyOperation — open_obligation + borrowThenSwap + cap transfer (2 transferObjects, both to sender) 1`] = `
[
  {
    "argumentCount": 4,
    "function": "open_obligation",
    "kind": "MoveCall",
    "module": "leverage_obligation",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 11,
    "function": "request_leverage",
    "kind": "MoveCall",
    "module": "leverage_borrow_swap",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_leverage",
    "kind": "MoveCall",
    "module": "leverage_repay",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateClaimLiquidityMiningReward — correct package, module, args 1`] = `
[
  {
    "argumentCount": 7,
    "function": "claim_liquidity_minging_rewards",
    "kind": "MoveCall",
    "module": "leverage_delegate",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
]
`;

exports[`LeverageMarketClient PTB shape populateDepositTransaction — refresh + deposit, no transfer 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 7,
    "function": "deposit",
    "kind": "MoveCall",
    "module": "leverage_delegate",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
]
`;

exports[`LeverageMarketClient PTB shape populateIncreaseLeverage — borrow_swap::request_leverage + swap + repay::complete_leverage + refund 1`] = `
[
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 11,
    "function": "request_leverage",
    "kind": "MoveCall",
    "module": "leverage_borrow_swap",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_leverage",
    "kind": "MoveCall",
    "module": "leverage_repay",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateIncreaseSizeOperation (BorrowSwap) — request_leverage + swap + complete_leverage + refund 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 11,
    "function": "request_leverage",
    "kind": "MoveCall",
    "module": "leverage_borrow_swap",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_leverage",
    "kind": "MoveCall",
    "module": "leverage_repay",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateIncreaseSizeOperation (SwapBorrow) — swap_borrow::request_leverage + swap + complete_leverage + refund 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 9,
    "function": "request_leverage",
    "kind": "MoveCall",
    "module": "leverage_swap_borrow",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_leverage",
    "kind": "MoveCall",
    "module": "leverage_swap_borrow",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateReduceLeverage (borrow-side) — request_reduce_leverage + swap + complete_reduce + refund (no split) 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "request_reduce_leverage",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_reduce",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateReduceLeverage (collateral-side) — request_reduce_leverage + split + swap + complete_reduce + refund 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "request_reduce_leverage",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 2,
    "function": "split_with_event",
    "kind": "MoveCall",
    "module": "leverage_repay",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_reduce",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 2,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateReduceSize (debt=0 early exit) — withdraw_size + refund, NO flash loan or swap 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 8,
    "function": "withdraw_size",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_collateral_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateReduceSize (output=borrow) — request_reduce_size + swap + complete_reduce + refund 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "request_reduce_size",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_reduce",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateReduceSize (output=collateral) — toCollateral branch: request_reduce_size + split + swap + complete_reduce 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "request_reduce_size",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 2,
    "function": "split_with_event",
    "kind": "MoveCall",
    "module": "leverage_repay",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 0,
    "function": "zero",
    "kind": "MoveCall",
    "module": "coin",
    "package": "0x0000000000000000000000000000000000000000000000000000000000000002",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 10,
    "function": "complete_reduce",
    "kind": "MoveCall",
    "module": "leverage_reduce_to_borrow_coin",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 2,
  },
]
`;

exports[`LeverageMarketClient PTB shape populateRepayTransaction — refresh + repay + transferObjects(refund, sender) 1`] = `
[
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
    ],
  },
  {
    "argumentCount": 3,
    "function": "refresh_usd_price",
    "kind": "MoveCall",
    "module": "user_oracle",
    "package": "0x144c57d6014488bc71c0902bddff482af090d13e2c61333ed903fe088220a92c",
    "typeArguments": [
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "argumentCount": 7,
    "function": "repay",
    "kind": "MoveCall",
    "module": "leverage_delegate",
    "package": "0x042a1a418bf977d5306aa783288eebbc2e3ca9200b533fba7feda521e60d199e",
    "typeArguments": [
      "0xfe1d8929d13b00aaecd7642dec1c6d41cab82882a1b139efa46bf61dfd6380bf::market_type::MainMarket",
      "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
      "0xdba34672e30cb065b1f93e3ab55318768fd6fef66c15942c9f7cb846e2f900e7::usdc::USDC",
    ],
  },
  {
    "kind": "TransferObjects",
    "objectCount": 1,
  },
]
`;
